networking/examples/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-access
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: demo-app
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
